remove alias from the unnest proto